using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Common 
{
    public static string sitDown = "SitDown";
    public static string standUp = "StandUp";
    public static string Chair = "Chair";
    public static string speedPercent = "speedPercent";
    public static string Person = "Person";
}
